core/viewer-wicket-ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides.css
/* ... */
.table .form-control:disabled {
    background-color: transparent;
    border: none;
    text-align: center;
    height: 23px;
    padding: 1px 0;
    cursor: default;
    outline: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
}

.table > thead > tr > th, td {
    text-align: left;
    vertical-align: middle;
}

.navbar {
    border-radius: 0;
}

#veil {
    z-index: 40000;
    background-image: none;
    background-color: black;

    display: none;
    position:fixed;
    top:0;
    left:0;
    height: 100%;
    width: 100%;
    opacity: 0.5;
    filter: alpha(opacity=50);
}

#veil .text-center {
    margin-top: 100px;
}

.table .table td {
    border: none;
}

.pagination {
    margin: 0;
}



/* from ActionPromptHeaderPanel */

.entityIconAndTitlePanel img {
    width: 24px;
    height: 24px;
}

.entityIconAndTitlePanel span.actionName {
    font-size: 20px;
    font-weight: bolder;
}


/* from SimpleClipboardPanel */

.simpleClipboardPanel form {
    margin: 20px;
    background-color: white;
}

.simpleClipboardPanel div.inner {
    margin: 20px;
    width:640px;
}

.simpleClipboardPanel div.inner p.scalarName {
    padding-top: 40px;
    padding-bottom: 10px;
}

.simpleClipboardPanel form input.textField {
    width:600px;
    margin-bottom: 60px;
}

.simpleClipboardPanel form input.ok {
    margin-bottom: 20px;
}



/* from CollectionContentsAsAjaxTablePanel.css */

.collectionContentsAsAjaxTablePanel table.contents {
    font-size: 0.9em;
    width: 100%;
    border-collapse:collapse;
    margin-top:10px;
}

.collectionContentsAsAjaxTablePanel table.contents caption { text-align: left; }
.collectionContentsAsAjaxTablePanel table.contents tr {
}


.collectionContentsAsAjaxTablePanel table.contents tr td {
    padding-left: 4px;
    padding-right: 4px;
}
.collectionContentsAsAjaxTablePanel table.contents tr th,
.collectionContentsAsAjaxTablePanel table.contents tr th a span {
    text-align: left;
    white-space: nowrap;
    font-weight: bold;
}

.collectionContentsAsAjaxTablePanel table.contents tr th a {
    font-weight: normal;
}
.collectionContentsAsAjaxTablePanel table.contents #message {
    padding-left: 3px;
}
.collectionContentsAsAjaxTablePanel table.contents caption {
    padding-bottom: 2px;
}

.collectionContentsAsAjaxTablePanel table.contents input:disabled {
    background-color: transparent;
    border: none;
}

.collectionContentsAsAjaxTablePanel table.contents .javaMathBigDecimalPanel,
.collectionContentsAsAjaxTablePanel table.contents .javaMathBigIntegerPanel,
.collectionContentsAsAjaxTablePanel table.contents .bytePanel,
.collectionContentsAsAjaxTablePanel table.contents .shortPanel,
.collectionContentsAsAjaxTablePanel table.contents .integerPanel,
.collectionContentsAsAjaxTablePanel table.contents .longPanel,
.collectionContentsAsAjaxTablePanel table.contents .floatPanel,
.collectionContentsAsAjaxTablePanel table.contents .doublePanel {
    text-align: right;
}

.collectionContentsAsAjaxTablePanel table.contents tbody td,
.collectionContentsAsAjaxTablePanel table.contents thead th {
    padding:5px;
}

.collectionContentsAsAjaxTablePanel table.contents tr.navigation div.navigatorLabel {
    float: left;
}


.collectionContentsAsAjaxTablePanel table.contents tr.navigation div.navigator {
    float: right;
}

.collectionContentsAsAjaxTablePanel table.contents img {
    width: 16px;
    height: 16px;
}

.collectionContentsAsAjaxTablePanel table.contents tbody .togglebox-column {
    width: 2%;
}
.collectionContentsAsAjaxTablePanel table.contents thead .title-column,
.collectionContentsAsAjaxTablePanel table.contents tbody .title-column {
    text-align: center;
    width: 3%;
}

.collectionContentsAsAjaxTablePanel table.contents a:hover {
    text-decoration:underline;
}

.collectionContentsAsAjaxTablePanel table.contents .entityLinkSelect2Panel .entityImage {
    padding-right:6px;
}

.collectionContentsAsAjaxTablePanel table tfoot {
    margin-top:20px;
}

.collectionContentsAsAjaxTablePanel table tfoot tr td {
    padding:20px 4px 0;
    /*background-color:#FFFFFF !important;*/
}

.collectionContentsAsAjaxTablePanel .entityActions {
    margin-top: -1px;
    margin-bottom: -10px;
    float: left;
    padding:0 0;
}

/* bootstrap seems to set to 'pointer' */
.collectionContentsAsAjaxTablePanel label:hover {
    /*cursor: default;*/
}

.collectionContentsAsAjaxTablePanel div input[type=text][disabled] {
    padding: 0;
}

.collectionContentsAsAjaxTablePanel table {
    border: none;
}

.collectionContentsAsAjaxTablePanel table tr td:first-child,
.collectionContentsAsAjaxTablePanel table tr th:first-child {
    border-left: none;
}

.collectionContentsAsAjaxTablePanel table tr th:last-child,
.collectionContentsAsAjaxTablePanel table tr td:last-child {
    border-right: none;
}

.collectionContentsAsAjaxTablePanel .table-responsive {
    overflow-x: auto;
    padding-bottom: 10px;
}

.collectionContentsAsAjaxTablePanel table tbody tr:last-child td {
    border-bottom: none;
}

.collectionContentsAsAjaxTablePanel table tfoot tr:first-child td {
    border-top: none;
    border-bottom: none;
}

.collectionContentsAsAjaxTablePanel .table {
    margin-bottom: 0px;
}


/* from CollectionContentsMultipleViewsPanel.css */
/* AND ALSO duplicated in from EntityLinksSelectorPanel.css */

.linksSelectorPanel .viewLinks {
    float:right;
    display:block;
    margin-left: 15px;
}

.linksSelectorPanel ul.dropdown-menu {
    min-width: 0;
}

.linksSelectorPanel ul.dropdown-menu li.viewItem {
    min-width: 0;
}

.linksSelectorPanel ul.viewList li.viewItem:first-child span {
    border-radius:4px 0 0 4px;
    -moz-border-radius:4px 0 0 4px;
    -webkit-border-radius:4px 0 0 4px;
}

.linksSelectorPanel ul.viewList li.viewItem:last-child span {
    border-radius:0 4px 4px 0;
    -moz-border-radius:0 4px 4px 0;
    -webkit-border-radius:0 4px 4px 0;
}


.linksSelectorPanel .link-selector-panel-invisible {
    display:none;
}
/* ... */

